fix: adjust popover content styling to be contrast
affects: @entur/tooltip

and update dependency

--- a/packages/tooltip/src/Popover.scss
+++ b/packages/tooltip/src/Popover.scss
@@ -1,7 +1,7 @@
 @import '~@entur/tokens/dist/styles.scss';
 
 .eds-popover {
-  background: $colors-blues-blue80;
+  background: $colors-brand-blue;
   box-shadow: $shadows-card-shadow;
   border-radius: $border-radiuses-default;
   border: $border-widths-small solid $colors-greys-grey10;
